--- a/code/index.html
+++ b/code/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <title>PSK App Core</title>
     PLACEHOLDER_THAT_WILL_BE_REPLACED_BY_SW_OR_SERVER_WITH_BASE_TAG
-    <link href="resources/css/main.css" rel="stylesheet" type="text/css" />
-    <link href="resources/css/general.css" rel="stylesheet" type="text/css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link href="resources/css/main.css" rel="stylesheet" type="text/css"/>
+    <link href="resources/css/general.css" rel="stylesheet" type="text/css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
     <script src="scripts/bundles/iframeBoot.js"></script>
     <script src="scripts/bundles/webshims.js"></script>
-    <link rel="stylesheet" href="webcardinal/webcardinal.css" />
+    <link rel="stylesheet" href="webcardinal/webcardinal.css"/>
     <script src="scripts/bundles/pskruntime.js"></script>
-    <script src="scripts/bundles/commonServices.js"></script>
     <script type="module" src="webcardinal/webcardinal.js"></script>
 
     <script src="resources/lodash/lodash.js"></script>
@@ -20,55 +19,77 @@
     <script src="resources/uuid/uuidv4.min.js"></script>
     <script src="resources/css/fonts/fontawesome5/js/all.min.js"></script>
     <script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
-    <link href="themes/sponsor-theme/index.css" rel="stylesheet" type="text/css" />
+    <link href="themes/sponsor-theme/index.css" rel="stylesheet" type="text/css"/>
 
     <script>
-      if (window.frameElement) {
-        const iframeIdentity = window.frameElement.getAttribute('identity');
+        if (window.frameElement) {
+            let iframeIdentity = window.frameElement.getAttribute('identity');
 
-        if (iframeIdentity) {
-          window.parent.document.dispatchEvent(
-            new CustomEvent(iframeIdentity, {
-              detail: {
-                status: 'completed',
-              },
-            })
-          );
+            //is just a hosted SSApp in a wallet
+            let isSimpleSSApp = false;
+            let iframeWindow = window.parent;
+            if (!iframeIdentity) {
+                isSimpleSSApp = true;
+
+                //parent.top does not fit the case when the wallet is an iframe in another application
+                let getWalletAppIframeWindow = function (parentWindow) {
+
+                    if (parentWindow.frameElement) {
+                        if (parentWindow.frameElement.hasAttribute("identity")) {
+                            iframeIdentity = parentWindow.frameElement.getAttribute("identity");
+                            return parentWindow;
+                        }
+                    }
+
+                    if (parentWindow === window.top) {
+                        console.log("No wallet environment found");
+                        return;
+                    }
+
+                    return getWalletAppIframeWindow(parentWindow.parent);
+                };
+
+                iframeWindow = getWalletAppIframeWindow(iframeWindow);
+            }
+
+            if (iframeWindow) {
+                iframeWindow.parent.document.dispatchEvent(new CustomEvent(iframeIdentity, {
+                    detail: {
+                        status: 'completed'
+                    }
+                }));
+            }
         }
-      }
     </script>
-  </head>
+</head>
 
-  <!-- <body>
-    <webc-app-root class="" style="display: flex; width: 100%; align-items: stretch">
-      <webc-app-router style="width: 100%; overflow-x: hidden" failRedirectTo="/home"></webc-app-router>
-    </webc-app-root>
-  </body>
-</html> -->
-
-  <webc-app-root preload="scripts/preload.js">
+<body>
+<webc-app-root preload="scripts/preload.js">
     <webc-app-container>
-      <header class="d-flex flex-row align-content-center justify-content-between" slot="before">
-        <img alt="PharmaLedger logo" src="themes/sponsor-theme/images/pharmaledger-logo.jpg" class="img-s" />
-        <share-did class="w-50"></share-did>
-        <div class="d-flex flex-row justify-content-center align-items-center">
-          <button class="button-menu button-transparent" data-tag="header:help">Help</button>
-          <button class="button-menu" data-tag="header:logout">Logout</button>
-        </div>
-      </header>
-      <webc-app-router failRedirectTo="/home"> </webc-app-router>
-      <footer class="eu-container" slot="after">
-        <div class="left-image-eu">
-          <img src="themes/sponsor-theme/images/EU_flag.jpg" class="img-s" />
-        </div>
-        <div class="right-text-eu">
-          <label>
-            This project has received funding from the European Union’s Horizon 2020 research and innovation programme
-            under grant agreement No 853992
-          </label>
-          <label>Copyright &copy; PharmaLedger Consortium 2020–2023</label>
-        </div>
-      </footer>
+        <header class="d-flex flex-row align-content-center justify-content-between" slot="before">
+            <img alt="PharmaLedger logo" src="themes/sponsor-theme/images/pharmaledger-logo.jpg" class="img-s"/>
+            <share-did class="w-50"></share-did>
+            <div class="d-flex flex-row justify-content-center align-items-center">
+                <button class="button-menu button-transparent" data-tag="header:help">Help</button>
+                <button class="button-menu" data-tag="header:logout">Logout</button>
+            </div>
+        </header>
+        <webc-app-router failRedirectTo="/home"></webc-app-router>
+        <footer class="eu-container" slot="after">
+            <div class="left-image-eu">
+                <img src="themes/sponsor-theme/images/EU_flag.jpg" class="img-s"/>
+            </div>
+            <div class="right-text-eu">
+                <label>
+                    This project has received funding from the European Union’s Horizon 2020 research and innovation
+                    programme
+                    under grant agreement No 853992
+                </label>
+                <label>Copyright &copy; PharmaLedger Consortium 2020–2023</label>
+            </div>
+        </footer>
     </webc-app-container>
-  </webc-app-root>
+</webc-app-root>
+<script src="scripts/bundles/commonServices.js"></script>
+</body>
 </html>
