--- a/code/modals/add-new-site-consent.html
+++ b/code/modals/add-new-site-consent.html
@@ -44,11 +44,14 @@
       <small class="form-text text-danger">A consent with this version already exits, or version is too small</small>
     </span>
   </div>
-  <psk-files-chooser style="margin: 10px" view-model="consent.attachment" event-name="add-file"> </psk-files-chooser>
-  <span data-if="@consent.file.invalidValue" class="d-flex flex-row">
-		<i class="red-invalid fas fa-times mr-2"></i>
-		<small class="form-text text-danger">No file selected</small>
-	</span>
+  <div class="m-2">
+    <label>{{ @consent.attachment.label }}</label><br>
+    <psk-files-chooser style="margin: 10px" view-model="consent.attachment" event-name="add-file"> </psk-files-chooser>
+    <span data-if="@consent.file.invalidValue" class="d-flex flex-row">
+      <i class="red-invalid fas fa-times mr-2"></i>
+      <small class="form-text text-danger">No file selected</small>
+    </span>
+  </div>
 </div>
 
 <button class="btn btn-primary" slot="footer" data-tag="create-consent">Submit</button>
