--- a/code/modals/add-new-trial-consent.html
+++ b/code/modals/add-new-trial-consent.html
@@ -18,6 +18,7 @@
 		</span>
 	</div>
   <div style="margin: 10px">
+		<label>{{ @consent.type.label }}</label><br>
 		<select class="form-control" data-for="@consent.type.selectOptions" required="required" value="@consent.type.value" disabled="@consent.type.disabled">
       <option value="@value">{{@label}}</option>
     </select>
@@ -34,11 +35,14 @@
 			<small class="form-text text-danger">This version already exists, or version number is too small</small>
 		</span>
 	</div>
-  <psk-files-chooser style="margin: 10px" view-model="consent.attachment" event-name="add-file"> </psk-files-chooser>
-	<span data-if="@consent.file.invalidValue" class="d-flex flex-row">
-		<i class="red-invalid fas fa-times mr-2"></i>
-		<small class="form-text text-danger">No file selected</small>
-	</span>
+	<div class="m-2">
+		<label>{{ @consent.attachment.label }}</label><br>
+		<psk-files-chooser style="margin: 10px" view-model="consent.attachment" event-name="add-file"> </psk-files-chooser>
+		<span data-if="@consent.file.invalidValue" class="d-flex flex-row">
+			<i class="red-invalid fas fa-times mr-2"></i>
+			<small class="form-text text-danger">No file selected</small>
+		</span>
+	</div>
 </div>
 
 <button class="btn btn-primary" slot="footer" data-tag="create-consent">Submit</button>
