--- a/code/pages/site-participant-devices.html
+++ b/code/pages/site-participant-devices.html
@@ -1,4 +1,4 @@
-<webc-container controller="ListParticipantsStatusController">
+<webc-container controller="ListParticipantsDevicesController">
   <link rel="stylesheet" href="assets/css/trials.css" />
   <div class="main-container">
     <div class="trial-header">
@@ -27,12 +27,12 @@
         <span> / </span>
         <label>Participant</label>
         <span> / </span>
-        <label>Status</label>
+        <label>Devices</label>
       </h1>
     </div>
     <div class="page-content">
       <div class="container">
-        Status
+        Devices
         <!-- <div data-if="@consentsArrayNotEmpty">
           <div slot="true">
             <webc-template template="table-site-participants-consents" data-view-model="@"></webc-template>
