--- a/code/pages/trial-visits.html
+++ b/code/pages/trial-visits.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="w-100 d-flex flex-wrap justify-content-between align-items-center py-3 mb-5">
           <div class="ml-auto">
-            <button class="btn btn-primary" data-tag="add-visits" disabled="@hasConsents">Add Visits</button>
+            <button class="btn btn-primary" data-tag="add-visits" disabled="@hasNoConsents">Add Visits</button>
           </div>
         </div>
 
