--- a/code/pages/site-participants-history.html
+++ b/code/pages/site-participants-history.html
@@ -44,7 +44,7 @@
           <div slot="true">
             <webc-template template="table-site-participants-history" data-view-model="@"></webc-template>
           </div>
-          <div slot="false">
+          <div slot="false" style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
             <div>No consent history data exist yet.</div>
           </div>
         </div>
