--- a/code/pages/site-participants.html
+++ b/code/pages/site-participants.html
@@ -50,7 +50,7 @@
             </div>
             <webc-template template="table-site-participants" data-view-model="@"></webc-template>
           </div>
-          <div slot="false">
+          <div slot="false" style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
             <div>No participants added yet.</div>
           </div>
         </div>
