--- a/code/pages/trial-consents.html
+++ b/code/pages/trial-consents.html
@@ -22,7 +22,7 @@
           <div slot="true">
             <webc-template template="table-trial-consents" data-view-model="@"></webc-template>
           </div>
-          <div slot="false">
+          <div slot="false" style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
             <div>No consents available.</div>
           </div>
         </div>
