--- a/code/pages/consent-history.html
+++ b/code/pages/consent-history.html
@@ -32,7 +32,7 @@
           <div slot="true">
             <webc-template template="table-consent-history" data-view-model="@"></webc-template>
           </div>
-          <div slot="false">
+          <div slot="false" style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
             <div>No consents available.</div>
           </div>
         </div>
