--- a/code/pages/site-participants-consents.html
+++ b/code/pages/site-participants-consents.html
@@ -36,7 +36,7 @@
           <div slot="true">
             <webc-template template="table-site-participants-consents" data-view-model="@"></webc-template>
           </div>
-          <div slot="false">
+          <div slot="false" style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
             <div>No consents data added yet.</div>
           </div>
         </div>
