--- a/code/pages/sites.html
+++ b/code/pages/sites.html
@@ -43,7 +43,7 @@
           <div slot="true">
             <webc-template template="table-sites" data-view-model="@"></webc-template>
           </div>
-          <div slot="false">
+          <div slot="false" style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
             <div>No sites available.</div>
           </div>
         </div>
