--- a/code/pages/trials.html
+++ b/code/pages/trials.html
@@ -37,7 +37,7 @@
           <div slot="true">
             <webc-template template="table-template" data-view-model="@"></webc-template>
           </div>
-          <div slot="false">
+          <div slot="false" style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
             <div>No trials available.</div>
           </div>
         </div>
