--- a/code/index.html
+++ b/code/index.html
@@ -18,7 +18,7 @@
     <script src="resources/papaparse/papaparse.min.js"></script>
     <script src="resources/uuid/uuidv4.min.js"></script>
     <script src="resources/css/fonts/fontawesome5/js/all.min.js"></script>
-    <script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
+    <script src="scripts/third-parties/pdf.js"></script>
     <link href="themes/sponsor-theme/index.css" rel="stylesheet" type="text/css"/>
 
     <script>
