--- a/code/pages/trials.html
+++ b/code/pages/trials.html
@@ -1,47 +1,66 @@
 <div class="main-container">
-  <div class="trial-header">
-    <h1 class="trial-title"><label>Trials</label></h1>
-  </div>
-  <div class="page-content">
-    <div class="container">
-      <link rel="stylesheet" href="assets/css/trials.css" />
-      <webc-container controller="ListTrialsController">
-        <div class="d-flex flex-wrap justify-content-between align-items-center py-3 mb-5">
-          <div class="d-flex flex-column">
-            <label>{{ @statuses.label }}</label>
-            <select class="form-control" data-for="@statuses.options" value="@statuses.value">
-              <option value="@value">{{@label}}</option>
-            </select>
-          </div>
-          <div class="d-flex flex-column">
-            <label>{{ @stages.label }}</label>
-            <select class="form-control" data-for="@stages.options" value="@stages.value">
-              <option value="@value">{{@label}}</option>
-            </select>
-          </div>
-          <div class="d-flex flex-column">
-            <label>{{ @search.label }}</label>
-            <input class="form-control" id="search-field" data-view-model="@search" event-name="filters-changed" />
-          </div>
-          <div class="align-self-end">
-            <button class="btn btn-primary" disabled="@clearButtonDisabled" data-tag="filters-cleared">
-              Clear filters
-            </button>
-          </div>
-          <div class="align-self-end">
-            <button class="btn btn-primary" data-tag="add-trial">Add Trial</button>
-          </div>
-        </div>
-
-        <div data-if="@trialArrayNotEmpty">
-          <div slot="true">
-            <webc-template template="table-template" data-view-model="@"></webc-template>
-          </div>
-          <div slot="false" style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
-            <div>No trials available.</div>
-          </div>
-        </div>
-      </webc-container>
+    <div class="trial-header">
+        <h1 class="trial-title"><label>Trials</label></h1>
     </div>
-  </div>
+    <div class="page-content">
+        <div class="container">
+            <link rel="stylesheet" href="assets/css/trials.css"/>
+            <webc-container controller="ListTrialsController">
+                <div data-if="@publicDidReady">
+
+                  <div slot="true" class="d-flex flex-wrap justify-content-between align-items-center py-3 mb-5">
+                        <div class="d-flex flex-column">
+                            <label>{{ @statuses.label }}</label>
+                            <select class="form-control" data-for="@statuses.options" value="@statuses.value">
+                                <option value="@value">{{@label}}</option>
+                            </select>
+                        </div>
+                        <div class="d-flex flex-column">
+                            <label>{{ @stages.label }}</label>
+                            <select class="form-control" data-for="@stages.options" value="@stages.value">
+                                <option value="@value">{{@label}}</option>
+                            </select>
+                        </div>
+                        <div class="d-flex flex-column">
+                            <label>{{ @search.label }}</label>
+                            <input class="form-control" id="search-field" data-view-model="@search"
+                                   event-name="filters-changed"/>
+                        </div>
+                        <div class="align-self-end">
+                            <button class="btn btn-primary" disabled="@clearButtonDisabled" data-tag="filters-cleared">
+                                Clear filters
+                            </button>
+                        </div>
+                        <div class="align-self-end">
+                            <button class="btn btn-primary" data-tag="add-trial">Add Trial</button>
+                        </div>
+                  </div>
+
+                  <div slot="true" data-if="@trialArrayNotEmpty" >
+                    <div slot="true">
+                      <webc-template template="table-template" data-view-model="@"></webc-template>
+                    </div>
+                    <div slot="false"
+                             style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
+                      <div>No trials available.</div>
+                    </div>
+                  </div>
+
+                  <div slot="false"
+                         class="d-flex flex-column align-items-center justify-content-center wallet-initializing-info">
+                        <div class="row">
+                            <div class="spinner-border text-info" role="status">
+                                <span class="sr-only">Loading...</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <strong>Wallet is initializing...</strong>
+                        </div>
+                    </div>
+
+                </div>
+
+            </webc-container>
+        </div>
+    </div>
 </div>
