--- a/code/pages/sites.html
+++ b/code/pages/sites.html
@@ -22,7 +22,7 @@
           <div class="d-flex flex-column">
             <label>{{ @stages.label }}</label>
             <select class="form-control" data-for="@stages.options" value="@stages.value">
-              <option value="@value">{{@label}}</option>
+              <option value="@value" disabled="@disabled">{{@label}}</option>
             </select>
           </div>
           <div class="d-flex flex-column">
