--- a/code/pages/sites.html
+++ b/code/pages/sites.html
@@ -1,53 +1,52 @@
 <webc-container controller="ListSitesController">
-  <link rel="stylesheet" href="assets/css/trials.css" />
-  <div class="main-container">
-    <div class="trial-header">
-      <h1 class="trial-title">
-        <webc-link tag="trials">Trials</webc-link>
-        <span> / </span>
-        <label>{{ @id }}</label>
-        <span> / </span>
-        <label>Sites</label>
-      </h1>
+  <div class="container main-container common-2-rows-grid">
+    <div class="container flex-container">
+      <breadcrumb-navigator></breadcrumb-navigator>
+      <h5 class="generic-title">Trial ID: {{@id}} - Sites</h5>
+      <webc-template template="alert" data-view-model="@" class="w-100"></webc-template>
     </div>
-    <div class="page-content">
-      <div class="container">
-        <div class="d-flex flex-wrap justify-content-between align-items-center py-3 mb-5">
-          <div class="d-flex flex-column">
+
+    <main>
+      <div class="d-flex flex-column w-100 h-100">
+        <div class="table-filter-wrapper actions-no-5">
+          <div>
+            <label>{{ @search.label }}</label>
+            <input class="form-control" id="search-field" data-view-model="@search"
+                   event-name="filters-changed"/>
+          </div>
+          <div>
             <label>{{ @statuses.label }}</label>
             <select class="form-control" data-for="@statuses.options" value="@statuses.value">
               <option value="@value">{{@label}}</option>
             </select>
           </div>
-          <div class="d-flex flex-column">
+          <div>
             <label>{{ @stages.label }}</label>
             <select class="form-control" data-for="@stages.options" value="@stages.value">
               <option value="@value" disabled="@disabled">{{@label}}</option>
             </select>
           </div>
-          <div class="d-flex flex-column">
-            <label>{{ @search.label }}</label>
-            <input class="form-control" id="search-field" data-view-model="@search" event-name="filters-changed" />
-          </div>
-          <div class="align-self-end">
+          <div class="option-button">
             <button class="btn btn-primary" disabled="@clearButtonDisabled" data-tag="filters-cleared">
               Clear filters
             </button>
           </div>
-          <div class="align-self-end">
+          <div class="option-button">
             <button class="btn btn-primary" data-tag="add-site">Add Site</button>
           </div>
         </div>
 
-        <div data-if="@sitesArrayNotEmpty">
+        <div class="w-100 h-100" data-if="@sitesArrayNotEmpty">
           <div slot="true">
             <webc-template template="table-sites" data-view-model="@"></webc-template>
           </div>
-          <div slot="false" style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
-            <div>No sites available.</div>
+
+          <webc-spinner slot="loading"></webc-spinner>
+          <div slot="false" class="alert alert-warning" role="alert">
+            <h4 class="alert-heading">No sites available yet!</h4>
           </div>
         </div>
       </div>
-    </div>
+    </main>
   </div>
 </webc-container>
