--- a/code/pages/trial-consents.html
+++ b/code/pages/trial-consents.html
@@ -1,32 +1,27 @@
 <webc-container controller="ListTrialConsentsController">
-  <link rel="stylesheet" href="assets/css/trials.css" />
-  <div class="main-container">
-    <div class="trial-header">
-      <h1 class="trial-title">
-        <webc-link tag="trials">Trials</webc-link>
-        <span> / </span>
-        <label>{{ @id }}</label>
-        <span> / </span>
-        <label>Consents</label>
-      </h1>
-    </div>
-    <div class="page-content">
-      <div class="container">
-        <div class="w-100 d-flex flex-wrap justify-content-between align-items-center py-3 mb-5">
-          <div class="ml-auto">
-            <button class="btn btn-primary" data-tag="add-consent">Add Consent</button>
-          </div>
+    <div class="container main-container common-2-rows-grid">
+        <div class="container flex-container">
+            <breadcrumb-navigator></breadcrumb-navigator>
+            <h5 class="generic-title">Trial ID: {{@id}} - Consents</h5>
+            <webc-template class="w-100" data-view-model="@" template="alert"></webc-template>
         </div>
 
-        <div data-if="@consentsArrayNotEmpty">
-          <div slot="true">
-            <webc-template template="table-trial-consents" data-view-model="@"></webc-template>
-          </div>
-          <div slot="false" style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
-            <div>No consents available.</div>
-          </div>
-        </div>
-      </div>
+        <main>
+            <div class="d-flex flex-column w-100 h-100">
+                <div class="d-flex w-100 justify-content-end mb-3">
+                    <button class="btn btn-primary" data-tag="add-consent">Add Consent</button>
+                </div>
+
+                <div data-if="@consentsArrayNotEmpty">
+                    <div slot="true">
+                        <webc-template data-view-model="@" template="table-trial-consents"></webc-template>
+                    </div>
+                    <webc-spinner slot="loading"></webc-spinner>
+                    <div class="alert alert-warning" role="alert" slot="false">
+                        <h4 class="alert-heading">No consents available yet!</h4>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
-  </div>
 </webc-container>
