--- a/code/pages/preview-consent.html
+++ b/code/pages/preview-consent.html
@@ -1,55 +1,19 @@
 <webc-container controller="PreviewConsentController">
-  <link rel="stylesheet" href="assets/css/trials.css" />
-  <div class="main-container">
-    <div class="trial-header">
-      <h1 class="trial-title">
-        <webc-link tag="trials">Trials</webc-link>
-        <span> / </span>
-        <label>{{ @id }}</label>
-        <span> / </span>
-        <button
-          data-tag="navigate-to-consents"
-          class="btn btn-bare btn-link"
-          style="margin: 0 0 2px 0 !important; padding: 0 !important; font-size: 20px !important"
-        >
-          CONSENTS
-        </button>
-        <span> / </span>
-        <label>{{ @consent.name }}</label>
-        <div data-if="@history" style="display: contents">
-          <span> / </span>
-          <button
-            data-tag="navigate-to-history"
-            class="btn btn-bare btn-link"
-            style="margin: 0 0 2px 0 !important; padding: 0 !important; font-size: 20px !important"
-          >
-            CONSENT HISTORY
-          </button>
-          <span> / </span>
-          <label>{{@consent.version}}</label>
-        </div>
-        <span> / </span>
-        <label>Preview Consent</label>
-      </h1>
-    </div>
-    <div class="page-content">
-      <div class="container">
-        <div class="w-100 d-flex flex-wrap justify-content-between align-items-center py-3 mb-5">
-          <div class="ml-auto">
-            <div></div>
-          </div>
+    <div class="container main-container common-2-rows-grid">
+        <div class="container flex-container">
+            <breadcrumb-navigator></breadcrumb-navigator>
+            <h5 class="generic-title">Consent: {{@consent.name}} (Version: {{@consent.version}}) - Preview Consent</h5>
+            <webc-template class="w-100" data-view-model="@" template="alert"></webc-template>
         </div>
 
-        <div class="w-100; d-flex align-items-center justify-content-center">
-          <div id="pdf-wrapper" style="max-height: 55vh; max-width: 75vw; overflow-y: scroll">
-            <div id="canvas-wrapper">
-              <div id="canvas-parent"></div>
+        <main>
+            <div class="d-flex flex-column w-100 h-100 align-items-center justify-content-center">
+                <div id="pdf-wrapper" style="overflow-y: scroll; width: auto; height: 100%; margin: 0 auto;">
+                    <div id="canvas-wrapper">
+                        <div id="canvas-parent"></div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-
-        <div></div>
-      </div>
+        </main>
     </div>
-  </div>
 </webc-container>
