--- a/code/pages/site-consent-history.html
+++ b/code/pages/site-consent-history.html
@@ -1,52 +1,24 @@
 <webc-container controller="SiteConsentHistoryController">
-  <link rel="stylesheet" href="assets/css/trials.css" />
-  <div class="main-container">
-    <div class="trial-header">
-      <h1 class="trial-title">
-        <webc-link tag="trials">Trials</webc-link>
-        <span> / </span>
-        <label>{{ @trialId }}</label>
-        <span> / </span>
-        <button
-          data-tag="navigate-to-sites"
-          class="btn btn-bare btn-link"
-          style="margin: 0 0 2px 0 !important; padding: 0 !important; font-size: 20px !important"
-        >
-          SITES
-        </button>
-        <span> / </span>
-        <label>{{ @siteId }}</label>
-        <span> / </span>
-        <button
-          data-tag="navigate-to-consents"
-          class="btn btn-bare btn-link"
-          style="margin: 0 0 2px 0 !important; padding: 0 !important; font-size: 20px !important"
-        >
-          CONSENTS
-        </button>
-        <span> / </span>
-        <label>{{ @data.0.name }}</label>
-        <span> / </span>
-        <label>Consent History</label>
-      </h1>
-    </div>
-    <div class="page-content">
-      <div class="container">
-        <div class="w-100 d-flex flex-wrap justify-content-between align-items-center py-3 mb-5">
-          <div class="ml-auto">
-            <div></div>
-          </div>
+    <div class="container main-container common-2-rows-grid">
+        <div class="container flex-container">
+            <breadcrumb-navigator></breadcrumb-navigator>
+            <h5 class="generic-title">Consent: {{@data.0.name}} - Site Consent History</h5>
+            <webc-template class="w-100" data-view-model="@" template="alert"></webc-template>
         </div>
 
-        <div data-if="@consentsArrayNotEmpty">
-          <div slot="true">
-            <webc-template template="table-site-consent-history" data-view-model="@"></webc-template>
-          </div>
-          <div slot="false" style="font-size: 20px; display: flex; flex-direction: row; justify-content: center;">
-            <div>No consents available.</div>
-          </div>
-        </div>
-      </div>
+        <main>
+            <div class="d-flex flex-column w-100 h-100">
+                <div class="w-100 h-100" data-if="@consentsArrayNotEmpty">
+                    <div slot="true">
+                        <webc-template data-view-model="@" template="table-site-consent-history"></webc-template>
+                    </div>
+
+                    <webc-spinner slot="loading"></webc-spinner>
+                    <div class="alert alert-warning" role="alert" slot="false">
+                        <h4 class="alert-heading">No consents available yet!</h4>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
-  </div>
 </webc-container>
