--- a/code/modals/add-new-site-consent.html
+++ b/code/modals/add-new-site-consent.html
@@ -1,4 +1,4 @@
-<h2 slot="header">New Consent</h2>
+<h2 slot="header">{{@modalTitle}}</h2>
 
 <div class="d-flex flex-column justify-content-between">
   <div style="margin-left: 10px">
@@ -45,7 +45,7 @@
     </span>
   </div>
   <div class="m-2">
-    <label>{{ @consent.attachment.label }}</label><br>
+    <label>{{ @consent.file.label }}</label><br>
     <!-- <psk-files-chooser style="margin: 10px" view-model="consent.attachment" event-name="add-file"> </psk-files-chooser> -->
     <div class='input-group d-flex justify-content-between align-items-center'>
       <input class='form-control' disabled value='@consent.attachment.name' placeholder="Select a *.pdf file"/>
