--- a/code/modals/add-new-trial-status.html
+++ b/code/modals/add-new-trial-status.html
@@ -1,7 +1,7 @@
 <h2 slot="header">Change Status</h2>
 
 <div class="d-flex flex-column justify-content-between">
-  <div style="margin: 10px">
+  <div class="form-group">
     <select
       class="form-control"
       data-for="@status.selectOptions"
@@ -14,4 +14,4 @@
   </div>
 </div>
 
-<button class="btn btn-primary" slot="footer" data-tag="submit">Submit</button>
+<button class="btn btn-primary mt-2" slot="footer" data-tag="submit">Submit</button>
