--- a/code/modals/edit-site-contact.html
+++ b/code/modals/edit-site-contact.html
@@ -3,7 +3,7 @@
 <form class="m-2">
   <div class="d-flex flex-column justify-content-between">
     <div class="form-group">
-      <label>{{ @site.name.label }}</label><br>
+      <label>{{ @site.name.label }}</label>
       <input  class="form-control" data-view-model="@site.name"></input>
     </div>
   </div>
