--- a/code/modals/add-new-site-consent.html
+++ b/code/modals/add-new-site-consent.html
@@ -1,17 +1,17 @@
 <h2 slot="header">{{@modalTitle}}</h2>
 
-<div class="d-flex flex-column justify-content-between">
-  <div style="margin-left: 10px">
+<div>
+  <div class="form-group">
     <label>Trial Consent Type</label>
     <input class="form-control" value="@consent.type" disabled="true"></input>
   </div>
 
-  <div style="margin-left: 10px" data-if="@existingConsent">
+  <div class="form-group" data-if="@existingConsent">
     <label>Trial Consent Name</label>
     <input class="form-control" value="@consent.trialConsentName" disabled="true"></input>
   </div>
   
-  <div style="margin: 10px" data-if="@newConsent">
+  <div class="form-group" data-if="@newConsent">
     <label>Trial Consent Name</label>
     <select data-tag="selected-consent-changed" class="form-control" data-for="@consent.trialConsentName.selectOptions" required="required" value="@consent.trialConsentName.value" disabled="@consent.trialConsentName.disabled">
       <option value="@value">{{@label}}</option>
@@ -22,13 +22,13 @@
     </div>
   </div>
 
-  <div style="margin-left: 10px">
+  <div class="form-group">
     <label>Trial Consent Version</label>
     <input class="form-control" value="@consent.trialConsentVersion" disabled="true"></input>
   </div>
 
-  <div style="margin-left: 10px; margin-bottom: 10px; margin-right: 10px">
-    <label>{{ @consent.name.label }}</label><br>
+  <div class="form-group">
+    <label>{{ @consent.name.label }}</label>
     <input class="form-control" data-view-model="@consent.name"></input>
     <span data-if="@consent.name.invalidValue">
       <i class="red-invalid fas fa-times"></i>
@@ -36,16 +36,16 @@
     </span>
   </div>
 
-  <div style="margin: 10px">
-    <label>{{ @consent.version.label }}</label><br>
+  <div class="form-group">
+    <label>{{ @consent.version.label }}</label>
     <input class="form-control" id="version-field" data-view-model="@consent.version" event-name="version-changed"></input>
     <span data-if="@consent.version.invalidValue">
       <i class="red-invalid fas fa-times"></i>
       <small class="form-text text-danger">A consent with this version already exits, or version is too small</small>
     </span>
   </div>
-  <div class="m-2">
-    <label>{{ @consent.file.label }}</label><br>
+  <div class="form-group">
+    <label>{{ @consent.file.label }}</label>
     <!-- <psk-files-chooser style="margin: 10px" view-model="consent.attachment" event-name="add-file"> </psk-files-chooser> -->
     <div class='input-group d-flex justify-content-between align-items-center'>
       <input class='form-control' disabled value='@consent.attachment.name' placeholder="Select a *.pdf file"/>
