--- a/code/modals/add-new-trial-consent.html
+++ b/code/modals/add-new-trial-consent.html
@@ -89,7 +89,7 @@
     </div>
     <span class="d-flex flex-row" data-if="@consent.visitsAndProceduresDocument.invalidValue">
       <i class="red-invalid fas fa-times mr-2"></i>
-      <small class="form-text text-danger">No file selected</small>
+      <small class="form-text text-danger">No file selected or file could not be parsed</small>
     </span>
   </div>
 </div>
