validation https://github.com/PharmaLedger-IMI/eco-iot-pmed-workspace/issues/456

--- a/code/modals/add-new-site.html
+++ b/code/modals/add-new-site.html
@@ -41,7 +41,7 @@
       <input  id="did-field" class="form-control" data-view-model="@site.did" event-name="did-changed"></input>
       <span data-if="@site.did.invalidValue" class="d-flex flex-row">
         <i class="red-invalid fas fa-times mr-2"></i>
-        <small class="form-text text-danger">A site with this DID already exits</small>
+        <small class="form-text text-danger">DID is invalid or a site with this DID already exits</small>
       </span>
     </div>
   </div>
