name https://github.com/PharmaLedger-IMI/eco-iot-pmed-workspace/issues/460

--- a/code/modals/edit-site-contact.html
+++ b/code/modals/edit-site-contact.html
@@ -3,6 +3,13 @@
 <form class="m-2">
   <div class="d-flex flex-column justify-content-between">
     <div class="form-group">
+      <label>{{ @site.did.label }}</label>
+      <input  class="form-control" data-view-model="@site.did"></input>
+    </div>
+  </div>
+
+  <div class="d-flex flex-column justify-content-between">
+    <div class="form-group">
       <label>{{ @site.name.label }}</label>
       <input  class="form-control" data-view-model="@site.name"></input>
     </div>
