--- a/code/modals/edit-recruitment-period.html
+++ b/code/modals/edit-recruitment-period.html
@@ -2,12 +2,12 @@
 
 <div class="top">
   <div class="form-group">
-    <label>Start Date</label>
+    <label class="col-form-label">Start Date</label>
     <input class="form-control" data-view-model="@startDate" type="date" value="@startDate.value" />
   </div>
 
   <div class="form-group">
-    <label>End Date</label>
+    <label class="col-form-label">End Date</label>
     <input class="form-control" data-view-model="@endDate" type="date" value="@endDate.value" />
   </div>
 </div>
