add statistics for IN-TREATMENT

--- a/code/pages/site-participants.html
+++ b/code/pages/site-participants.html
@@ -17,6 +17,7 @@
                             <div class="col-md-2">Enrollment Percentage</div>
                             <div class="col-md-1">Withdrawn</div>
                             <div class="col-md-1">Declined</div>
+                            <div class="col-md-1">In Treatment</div>
                             <div class="col-md-2">End of treatment</div>
                             <div class="col-md-1">Completed</div>
                             <div class="col-md-1">Discontinued</div>
@@ -29,6 +30,7 @@
                             <div class="col-md-2">{{@statistics.percentageEnrolled}} %</div>
                             <div class="col-md-1">{{@statistics.withdrew}}</div>
                             <div class="col-md-1">{{@statistics.declined}}</div>
+                            <div class="col-md-1">{{@statistics.inTreatment}}</div>
                             <div class="col-md-2">{{@statistics.endOfTreatment}}</div>
                             <div class="col-md-1">{{@statistics.completed}}</div>
                             <div class="col-md-1">{{@statistics.discontinued}}</div>
