improvements for https://github.com/PharmaLedger-IMI/eco-iot-pmed-workspace/issues/462

--- a/code/modals/add-new-site-consent.html
+++ b/code/modals/add-new-site-consent.html
@@ -1,6 +1,6 @@
 <h2 slot="header">{{@modalTitle}}</h2>
 
-<div>
+<div class="modal-form-container">
   <div class="form-group">
     <label class="col-form-label">Trial Consent Type</label>
     <input class="form-control" value="@consent.type" disabled="true" />
