--- a/code/modals/add-new-trial-consent.html
+++ b/code/modals/add-new-trial-consent.html
@@ -3,7 +3,7 @@
   <h2 slot="true">New Consent Version</h2>
 </div>
 
-<div class="d-flex flex-column justify-content-between" style="row-gap: 0.5rem">
+<div class="modal-form-container">
   <div class="form-group">
     <label class="col-form-label">{{ @consent.name.label }}</label>
     <input class="form-control" data-view-model="@consent.name" />
