remove ! from no sites available yet

--- a/code/pages/sites.html
+++ b/code/pages/sites.html
@@ -43,7 +43,7 @@
 
                     <webc-spinner slot="loading"></webc-spinner>
                     <div class="alert alert-warning" role="alert" slot="false">
-                        <h4 class="alert-heading">No sites available yet!</h4>
+                        <h4 class="alert-heading">No sites available yet</h4>
                     </div>
                 </div>
             </div>
